# eegle

./: .gitignore  AGENTS.md  Makefile  README.md  alpha8  classify8  inhibition8  pyproject.toml
configs/: AGENTS.md  __init__.py  default_experiment.json  forward_go_nogo_classifier8.json  forward_go_nogo_enobio8.json  forward_go_nogo_inhibition8.json  forward_pvt_enobio.json  forward_pvt_enobio8.json  forward_pvt_neuracle64.json
constraints/: macos-python310.txt
docs/: ARCHITECTURE.md  MODEL_TRAINING_TESTING_GOALS.md  PSYCHOPY_REFERENCE.md  ROADMAP.md
eegle/: AGENTS.md  __main__.py  cli.py  components.py  config.py  experiment.py  factory.py  feedback_manager.py  preflight.py  session.py
eegle/analysis/: __init__.py  classification.py  erp.py  html_summary.py  inhibition8.py  reanalysis.py  reports.py
eegle/calibration/: __init__.py  posterior_alpha.py  registry.py
eegle/devices/: lsl_eeg.py  simulated_lsl.py
eegle/hardware/: __init__.py  capabilities.py  eeg_device.py  neuracle.py  os_support.py  profiles.py  system.py
eegle/ml/: __init__.py  calibration.py  contracts.py  registry.py  registry_types.py  targets.py
eegle/pipelines/: alpha8.py  classify8.py  inhibition8.py
eegle/realtime/: classification.py  controller.py  demo_classifier.py  epoching.py  event_features.py  feedback.py  models.py  policy.py  preprocessing.py  registry.py  task_feedback.py
eegle/tasks/: base.py  go_nogo.py  pvt.py  registry.py
eegle/workers/: __init__.py  dashboard.py  offline_analyzer.py  realtime_processor.py  recorder.py
reproduce/: AGENTS.md  __init__.py  __main__.py  cli.py  components.py  config.py  experiment.py  factory.py  feedback_manager.py  lsl.py  preflight.py  runtime.py  session.py  telemetry.py
reproduce/analysis/: alpha.py  classification.py  erp.py  html_summary.py  inhibition8.py  model_validation.py  reanalysis.py  reports.py  signal_quality.py
reproduce/calibration/: __init__.py  posterior_alpha.py  registry.py
reproduce/devices/: lsl_eeg.py  lsl_quality.py
reproduce/hardware/: capabilities.py  eeg_device.py  enobio.py  os_support.py
reproduce/io/: __init__.py  events.py
reproduce/pipelines/: __init__.py  alpha8.py  classify8.py  inhibition8.py
reproduce/realtime/: __init__.py  alpha.py  buffer.py  classification.py  controller.py  demo_classifier.py  emitters.py  epoching.py  event_features.py  models.py  performance.py  policy.py  registry.py  task_feedback.py
reproduce/tasks/: __init__.py  go_nogo.py  pvt.py  registry.py
reproduce/workers/: common.py  dashboard.py  (+5 more)
scripts/: check_classifier_prepared_epochs.py  merge_epoch_sessions.py  patch_classifier_config_warn_only.py  patch_classifier_numeric_preprocessing.py  patch_live_classifier_quality_gate.py
tests/: AGENTS.md  test_classification.py  test_closed_loop_model_system.py  test_inhibition8.py  test_ml_infrastructure.py  test_portability.py  test_realtime_synchrony.py
(+4 files in other folders)
